# otusdemo

./: README.md  affo.postman_collection.json  dev_environment.postman_environment.json  skaffold.yaml  trymarqet.postman_collection.json
deployments/helm/affo/: Chart.yaml  values.yaml
deployments/helm/affo/templates/: istio-authn.yaml  istio-authz-billing.yaml  istio-authz-deeplinks.yaml  istio-authz-events.yaml  istio-authz-stats.yaml  istio-authz-ui.yaml  istio-authz-users.yaml  istio-gateway.yaml  istio-virtualservice.yaml
deployments/helm/trymarqet/: Chart.yaml  values.yaml
deployments/helm/trymarqet/templates/: istio-gateway.yaml  istio-virtualservice.yaml
deployments/k8s/: namespaces.yaml
examples/helm/affo/: secrets.dev.yaml  values.dev.yaml
examples/helm/trymarqet/: secrets.dev.yaml  values.dev.yaml
py/lib/schemas/: pyproject.toml
py/services/auth/: Dockerfile
py/services/billing/: Dockerfile
py/services/deeplinks/: .isort.cfg  Dockerfile  manage.py  pyproject.toml  pytest.ini
py/services/deeplinks/deeplinks/: main.py  settings.py
py/services/deeplinks/deeplinks/models/: __init__.py  deeplink.py
py/services/deeplinks/deeplinks/routers/: deeplinks.py  redirect.py  utils.py
py/services/deeplinks/deeplinks/schemas/: __init__.py  deeplink.py
py/services/deeplinks/deeplinks/use_cases/: deeplink.py  event.py  id.py  redirect.py
py/services/deeplinks/tests/: conftest.py  test_deeplinks.py
py/services/events/: .isort.cfg  Dockerfile  manage.py  pyproject.toml
py/services/events/events/: exceptions.py  main.py  settings.py
py/services/events/events/models/: event.py
py/services/events/events/routers/: events.py
py/services/events/events/schemas/: event.py
py/services/events/events/use_cases/: event.py  id.py
py/services/events/tests/: conftest.py  test_event.py
py/services/order-confirmator/: .isort.cfg  Dockerfile  pyproject.toml
py/services/order-confirmator/order_confirmator/: __main__.py  settings.py
py/services/orders/: Dockerfile  pyproject.toml  pytest.ini
py/services/payments/: .isort.cfg  Dockerfile  alembic.ini  manage.py  pyproject.toml  pytest.ini
py/services/payments/payments/: database.py  exceptions.py  main.py  settings.py
py/services/payments/payments/db/migrations/: env.py
py/services/payments/payments/db/migrations/versions/: a07fe7b1d35b_.py
py/services/payments/payments/models/: payment.py
py/services/payments/payments/routers/: payments.py
py/services/payments/payments/schemas/: __init__.py  payment.py
py/services/payments/payments/use_cases/: payments.py
py/services/payments/tests/: conftest.py  test_payments.py
py/services/products/: .isort.cfg  Dockerfile  alembic.ini  manage.py  pyproject.toml  pytest.ini
py/services/products/products/: database.py  exceptions.py  main.py  settings.py
py/services/products/products/db/migrations/: env.py
py/services/products/products/db/migrations/versions/: 53f61329a027_initial_products.py  651bc5879202_.py
py/services/products/products/models/: __init__.py  product.py  reservation.py
py/services/products/products/routers/: products.py  reservations.py
py/services/products/products/schemas/: __init__.py  product.py  reservation.py
py/services/products/products/use_cases/: products.py  reservations.py
py/services/products/tests/: conftest.py  test_probe.py  test_products.py  test_reservations.py
py/services/revenue/: .isort.cfg  Dockerfile  main.py  pyproject.toml
py/services/revenue/revenue/: __main__.py  settings.py
py/services/statistics/: .isort.cfg  Dockerfile  manage.py  pyproject.toml
py/services/statistics-aggregator/: .isort.cfg  Dockerfile  pyproject.toml
py/services/stats/: .isort.cfg  Dockerfile  manage.py  pyproject.toml  pytest.ini
py/services/stats-aggregator/: .isort.cfg  Dockerfile  main.py  manage.py  pyproject.toml
py/services/stats-aggregator/stats_aggregator/: database.py  settings.py
py/services/stats-aggregator/stats_aggregator/models/: __init__.py  funnel.py
py/services/users/: Dockerfile  pyproject.toml
ui/affo/: Dockerfile  package.json
ui/affo/src/: App.js  authProvider.js  dataProvider.js  deeplinks.js  statistics.js  stats.js
(+78 files in other folders)
